2004-09-16  Chris Dunlap  <cdunlap@llnl.gov>

	* src/munge/remunge.c: Added "-u" and "-g" cmdline opts.

	* src/munged/timer.h: Tweaked timer_init() docs.

	* src/munged/hash.c: Replaced parm asserts with if-guards.

	* src/munged/dec_v1.c, src/munged/enc_v1.c:
	  Removed extern declaration of conf -- now in conf.h.

	* src/munged/gids.c, src/munged/gids.h:
	  Added timer to periodically re-parse group info.
	* src/munged/conf.c, src/munged/conf.h:
	  Made extern declaration of conf.
	  Added got_group_stat flag to struct conf.
	* src/libcommon/munge_defs.h:
	  Added MUNGE_GROUP_STAT_FLAG and MUNGE_GROUP_PARSE_TIMER.

2004-09-10  Chris Dunlap  <cdunlap@llnl.gov>

	* src/munged/replay.c: Removed mac_len from union replay_key
	  to further reduce storage requirements for replay data.
	* src/munged/replay.c: Changed struct replay_key to union replay_key
	  to reduce storage requirements for replay data.

	* src/munged/cred.c(cred_create):
	  Fixed bug where error condition was not set on failure.

2004-09-09  Chris Dunlap  <cdunlap@llnl.gov>

	* src/munge/munge.c, src/munge/remunge.c:
	  Fixed strtol() int/long mismatches for 64-bit platforms.

2004-09-07  Chris Dunlap  <cdunlap@llnl.gov>

	* src/munged/gids.h: Changed GIDS_HASH_SIZE from 1213 to 2053.

2004-09-03  Chris Dunlap  <cdunlap@llnl.gov>

	* src/munge/remunge.c: Set stdout to be line buffered.
	* src/munge/remunge.c: Close stdin.
	* src/munge/remunge.c: Ignore SIGHUP.
	* src/munge/remunge.c: Changed DEF_DO_DECODE from 1 to 0.
	* src/munge/remunge.c: Subtract error count from number processed.

	* src/munged/hash.c: Changed HASH_ALLOC from 256 to 1024.
	* src/munged/replay.c: Changed REPLAY_ALLOC from 256 to 1024.
	* src/munged/replay.h: Changed REPLAY_HASH_SIZE from 4013 to 65537.

	* src/munged/gids.c, src/munged/gids.h: Added GIDS_HASH_SIZE.

	* src/munged/munged.c(main):
	  Changed default log priority level from LOG_NOTICE to LOG_INFO.

	* src/munged/conf.c(display_help): Added newline.
